--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,28 +1,11 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="ja">
+{% extends 'blog/base.html' %}
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Django Startup Template</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-  <link rel="stylesheet" href="{% static 'css/blog.css' %}" />
-</head>
-
-<body>
-  <div>
-    <h1><a href="/">Django Startup Template</a></h1>
-  </div>
-
+{% block content %}
   {% for post in posts %}
-  <div>
+  <div class="post">
     <p>published: {{ post.published_date }}</p>
     <h2><a href="">{{ post.title }}</a></h2>
     <p>{{ post.text|linebreaksbr }}</p>
   </div>
   {% endfor %}
-</body>
-
-</html>
+{% endblock %}
