--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,15 +5,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Django Startup Template</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+  <title>Blog</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js">
   <link rel="stylesheet" href="{% static 'css/blog.css' %}" />
 </head>
 
 <body>
   <div class="page-header">
-    <h1><a href="/">Blog - Django Startup</a></h1>
+    {% if user.is_authenticated %}
+      <a href="{% url 'post_new' %}" class="top-menu">Post<i class="fas fa-plus-circle"></i></a>
+    {% endif %}
+    <h1><a href="/">Blog</a></h1>
   </div>
   <div class="content container">
     <div class="row">
