--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,7 +14,8 @@
 <body>
   <div class="page-header">
     {% if user.is_authenticated %}
-      <a href="{% url 'post_new' %}" class="top-menu">Post<i class="fas fa-plus-circle"></i></a>
+      <a href="{% url 'post_new' %}" class="top-menu">Post</a>
+      <a href="{% url 'post_draft_list' %}" class="top-menu">Draft</a>
     {% endif %}
     <h1><a href="/">Blog</a></h1>
   </div>
