--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,12 +3,15 @@
 {% block content %}
 <div class="post">
   {% if post.published_date %}
-  <div class="date">
-    {{ post.published_date }}
-  </div>
+    <div class="date">
+      {{ post.published_date }}
+    </div>
+  {% else %}
+      <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
   {% endif %}
   {% if user.is_authenticated %}
     <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">Edit</span></a>
+    <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}">Delete</span></a>
   {% endif %}
   <h2>{{ post.title }}</h2>
   <p>{{ post.text|linebreaksbr }}</p>
