--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,6 +16,9 @@
     {% if user.is_authenticated %}
       <a href="{% url 'post_new' %}" class="top-menu">Post</a>
       <a href="{% url 'post_draft_list' %}" class="top-menu">Draft</a>
+      <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+    {% else %}
+        <a href="{% url 'login' %}" class="top-menu">Login</span></a>
     {% endif %}
     <h1><a href="/">Blog</a></h1>
   </div>
