--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,8 +10,8 @@
       <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
   {% endif %}
   {% if user.is_authenticated %}
-    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">Edit</span></a>
-    <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}">Delete</span></a>
+    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">Edit</a>
+    <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}">Delete</a>
   {% endif %}
   <h2>{{ post.title }}</h2>
   <p>{{ post.text|linebreaksbr }}</p>
@@ -21,7 +21,13 @@
 <a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
 {% for comment in post.comments.all %}
   <div class="comment">
-    <div class="date">{{ comment.created_date }}</div>
+    <div class="date">
+      {{ comment.created_date }}
+      {% if not comment.approved_comment %}
+        <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}">Remove</a>
+        <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}">Approve</a>
+      {% endif %}
+    </div>
     <strong>{{ comment.author }}</strong>
     <p>{{ comment.text|linebreaks }}</p>
   </div>
